--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ services:
 before_install:
   - docker build  -t datdevboi/docker-react -f Dockerfile.dev .
 script:
-  - docker run datdevboi/docker-readt npm run test -- --coverage
+  - docker run datdevboi/docker-react npm run test -- --coverage
