--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,16 @@ before_install:
   - docker build  -t datdevboi/docker-react -f Dockerfile.dev .
 script:
   - docker run datdevboi/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-1-632621263893"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECURE_KEY"
