--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ deploy:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
-    secure: "$AWS_SECURE_KEY"
+    secure: "$AWS_SECREY_KEY"
